--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=1.3
-impl.version=1.3.2
-dist.version=1_3_2-20050919
+impl.version=1.3.3
+dist.version=1_3_3-snapshot-20050920
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
