--- a/default.properties
+++ b/default.properties
@@ -9,9 +9,9 @@
 # Project Properties ------------------------------------------
 Name=JGoodies Looks
 name=looks
-spec.version=1.3
-impl.version=1.3.3
-dist.version=1_3_3-snapshot-20050920
+spec.version=1.4
+impl.version=1.4-alpha
+dist.version=1_4_alpha-snapshot-20051017
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
