--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=2.0
-impl.version=2.0.2-snapshot
-dist.version=2_0_2-snapshot-20060328
+impl.version=2.0.2
+dist.version=2_0_2-20060502
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
