--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=2.1pre
-impl.version=2.1-preview
-dist.version=2_1_0-preview-20060616
+impl.version=2.1-pre2
+dist.version=2_1_0-pre2-20060626
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
