--- a/default.properties
+++ b/default.properties
@@ -9,9 +9,9 @@
 # Project Properties ------------------------------------------
 Name=JGoodies Looks
 name=looks
-spec.version=2.1pre
-impl.version=2.1-pre4
-dist.version=2_1_0-pre4-20061101
+spec.version=2.1b1
+impl.version=2.1b1
+dist.version=2_1_0-Beta1-20061103
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
