--- a/default.properties
+++ b/default.properties
@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=2.1
-impl.version=2.1.4
-dist.version=2_1_4-20070316
+impl.version=2.1.4rc
+dist.version=2_1_4-rc-20070417
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
