--- a/default.properties
+++ b/default.properties
@@ -9,9 +9,9 @@
 # Project Properties ------------------------------------------
 Name=JGoodies Looks
 name=looks
-spec.version=2.1
-impl.version=2.1.4
-dist.version=2_1_4-20070417
+spec.version=2.2
+impl.version=2.2.0b1
+dist.version=2_2_0-beta1-20080716
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
@@ -38,7 +38,7 @@ descriptors.dir = ${top.dir}/conf/service descriptors
 
 # Library Properties ------------------------------------------
 lib.dir        = ${top.dir}/lib
-lib.forms.name = forms-1.1.0.jar
+lib.forms.name = forms-1.2.0.jar
 lib.forms.jar  = ${lib.dir}/${lib.forms.name}
 
 
